--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -19,11 +19,17 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@wade-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
     "@wade-cli-dev/log": "file:../../utils/log",
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "import-local": "^3.0.2",
+    "minimist": "^1.2.5",
     "npmlog": "^4.1.2",
-    "semver": "^7.3.5"
+    "path-exists": "^4.0.0",
+    "root-check": "^1.0.0",
+    "semver": "^7.3.5",
+    "user-home": "^3.0.0"
   },
   "gitHead": "6b52bef4b500f0ee157389c88103265d3439e372",
   "publishConfig": {
