--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -25,5 +25,10 @@
   },
   "bugs": {
     "url": "https://github.com/web-wade/wade-cli-dev/issues"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "semver": "^7.3.5",
+    "url-join": "^4.0.1"
   }
 }
