--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@wade-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
+    "@wade-cli-dev/init": "file:../../commands/init",
     "@wade-cli-dev/log": "file:../../utils/log",
     "colors": "^1.4.0",
+    "commander": "^7.2.0",
     "dotenv": "^8.2.0",
     "import-local": "^3.0.2",
     "minimist": "^1.2.5",
