--- a/utils/format-path/package.json
+++ b/utils/format-path/package.json
@@ -5,7 +5,7 @@
   "author": "wade <756059388@qq.com>",
   "homepage": "https://github.com/web-wade/wade-cli-dev#readme",
   "license": "ISC",
-  "main": "lib/format-path.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
